--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -7,13 +7,13 @@
     justify-content: center;
     width: 100%;
     height: 50px;
-    background: linear-gradient(45deg, hsl(308, 77%, 83%), #d1fdff);
+    background: radial-gradient(circle at 28.68% 28.68%, #fb6ec7 0, #eb65cd 16.67%, #d75cd3 33.33%, #be55d8 50%, #a050dd 66.67%, #7c4fe3 83.33%, #4650e8 100%);
     box-shadow: 10px 10px 8px 2px rgba(0, 0, 0, 0.3);
     border-radius: 0px 0px 4px 4px;
 }
 
 body {
-    background: linear-gradient(45deg, #a8edea, #fed6e3);
+    background: radial-gradient(circle at 28.68% 28.68%, #fb6ec7 0, #eb65cd 16.67%, #d75cd3 33.33%, #be55d8 50%, #a050dd 66.67%, #7c4fe3 83.33%, #4650e8 100%);
 }
 
 .container {
@@ -64,12 +64,12 @@ img {
     display: block;
     padding: 10px 20px;
     background-color: transparent;
-    border: 1px solid rgb(227, 140, 242);
+    border: 1px solid #be55d8;
     border-radius: 7px;
     margin: 50px auto;
     box-shadow: 10px 10px 8px 2px rgba(0, 0, 0, 0.3);
     cursor: pointer;
-    background: linear-gradient(45deg, hsl(308, 77%, 83%), #d1fdff);
+    background: linear-gradient(45deg, #7a91ff, #adb4ff);
 }
 
 .submit {
